labels/require-standard-labels/.chainsaw-test/invalid-missing-version.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-missing-version
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
    - name: app
      image: nginx:1.25
