labels/require-standard-labels/.chainsaw-test/invalid-no-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: invalid-no-labels
spec:
  containers:
    - name: app
      image: nginx:1.25
