labels/require-standard-labels/.chainsaw-test/valid-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: valid-pod
  labels:
    app.kubernetes.io/name: myapp
    app.kubernetes.io/version: "1.0.0"
spec:
  containers:
    - name: app
      image: nginx:1.25
